--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -91,7 +91,7 @@ macos_instance:
 task:
   name: AppleM1/LLVM armv7-androidndk xbuild
   compile_script:
-  - #brew install android-ndk
+  - brew install android-ndk
   - export #PATH=/opt/homebrew/opt/llvm/bin:$PATH
   - export #LDFLAGS="-L/opt/homebrew/opt/llvm/lib"
   - export #CPPFLAGS="-I/opt/homebrew/opt/llvm/include" 
