More doc improvements
* Fold "Users of OpenBLAS", "Publications", "Mailing list", "Donation" pages into "About"
* Remove full license
* Remove outdated TODO and machine list pages
* Shorter titles for CI and distributing pages
* Link to GotoBLAS readme in repo
* Brief description of OpenBLAS in homepage
* Move acknowledgements into About page
* Remove manual TOC in FAQ docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,10 +20,5 @@ nav:
   - build_system.md
   - distributing.md
   - ci.md
-  - machine_list.md
-  - todo.md
-  - ecosystem.md
-  - publications.md
-  - mailing_list.md
-  - donate.md
+  - about.md
   - faq.md
